# rackscope

./: .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .markdownlint.jsonc  .semgrepignore  .trivyignore  .yamllint.yml  AGENTS.md  BASELINE_METRICS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  GEMINI.md  LICENSE  Makefile  NOTES.md  PLUGINS.md  PROMPT_FINAL.md  README.md  REFACTORING_ROADMAP.md  RELEASE_SETUP.md  STATUS.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini  old_claude.md  prompt.md  pw-dark.js  pw-dark2.js  pw-debug.js  pw-debug2.js  pw-final.js  pw-find-home.js  pw-investigate.js  pw-more.js  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  docker.yml  publish-release.yml  release.yml  security.yml  status.yml
ARCHITECTURE/: ADR.md  ARCHITECTURE.md  CHECKS_LIBRARY.md  FOUNDATION_PLAN.md  IMPORTERS.md  LOGICAL_ARCHITECTURE_PLAN.md  NOTES.md  PHASE_2_DEPENDENCY_INJECTION.md  PHASE_3_SERVICE_LAYER.md  PHASE_4_LOGGING_ERROR_HANDLING.md  PHASE_5_TEST_COVERAGE.md  PHASE_7_FRONTEND_PLAN.md  PLUGIN_ARCHITECTURE.md  README.md  README_PRIVATE.md  ROADMAP.md  VIEW_MODEL.md
ARCHITECTURE/decisions/: ADR-007-METRICS-LIBRARY.md
ARCHITECTURE/features/: VIRTUAL_NODES_EXPANSION.md
ARCHITECTURE/phases/: PHASE_10_TANSTACK_QUERY.md  PHASE_1_BACKEND_ROUTER_SPLIT.md  PHASE_6.5_METRICS_LIBRARY.md  PHASE_6_BACKEND_PLAN.md  PHASE_7_FRONTEND_PLAN.md
ARCHITECTURE/plans/: CONSOLIDATED_ROADMAP.md  LOGICAL_ARCHITECTURE_PLAN.md  PLUGIN_ARCHITECTURE.md  REFACTORING_ROADMAP.md  ROADMAP.md
ARCHITECTURE/reference/: CHECKS_LIBRARY.md  IMPORTERS.md  PLUGIN_DEVELOPMENT.md  TESTING.md
badges/: tests.json
config/: README.md  app.example.exascale.yaml  app.example.homelab.yaml  app.example.hpc-cluster.yaml  app.example.small-cluster.yaml  app.yaml  app.yaml.example-new-format  app.yaml.reference  simulator.yaml  simulator_metrics_examples.yaml  simulator_metrics_full.yaml  simulator_metrics_slurm.yaml  simulator_overrides.yaml
config-examples/: .topology.yaml.swp  README.md  topology.yaml
config-examples/templates/: blades.yaml  bull.yaml  storage.yaml
config/checks/: library.yaml
config/examples/: TEST_PLAN.md  TEST_RESULTS.md  VALIDATION.md
config/profiles/: README.md
config/templates/: README.md
config/topology/: README.md  sites.yaml  topology.yaml
docs/: ADMIN_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  COSMOS_UI.md  DEVELOPMENT.md  METRICS.md  PLUGINS.md  README.md  SIMULATOR.md  SIMULATOR_DEMO_MODE.md  USER_GUIDE.md
examples/: README.md
examples/full-datacenter/: app.yaml
examples/hpc-cluster/: README.md  app.yaml  app.yaml.example-new-format
examples/simple-room/: app.yaml
frontend/: .stylelintrc.json  Dockerfile  Dockerfile.prod  eslint.config.js  index.html  nginx.prod.conf  package-lock.json  package.json  screenshot.cjs  screenshot2.cjs  screenshot3.cjs  tsconfig.app.json  vite.config.ts
frontend/public/: tooltip-mockups.html
mockup/: README.md
nginx/: nginx.conf
scripts/: add_default_metrics_to_templates.py  check-deps.sh  deps-table.py  gen_status.py  run-example-tests.sh  security-full.sh  use-example.sh  validate_examples.py
src/: Dockerfile
tests/: conftest.py  test_api.py  test_dependencies.py  test_exceptions.py  test_loader.py  test_log_buffer.py  test_middleware.py  test_model.py  test_planner.py  test_planner_for_duration_extended.py  test_prometheus_client.py  test_topology_index.py  test_topology_service.py
tools/: API_GENERATOR_README.md  GENERATOR_README.md  README.md  generate_topology.py  generate_topology_api.py  generator_config_hpc.yaml  generator_config_small.yaml  generator_models.py  reformat_templates.py  test_api_generator.sh  update_templates_metrics.py
website/: .dockerignore  Dockerfile  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+976 files in other folders)
