[project]
name = "rackscope"
version = "0.0.0"
description = "Rack & Server Monitoring Dashboard (Prometheus-first physical views)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "rackscope contributors"}]
dependencies = [
  "pydantic>=2.12.5",
  "pyyaml>=6.0.3",
  "fastapi>=0.128.0",
  "uvicorn>=0.40",
  "httpx>=0.28.1",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.8.0",
  "radon>=6.0.1",
  "ruff>=0.14.14",
]

[project.scripts]
rackscope = "rackscope.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
