[project]
name = "rackscope"
version = "1.0.0b1"
description = "Prometheus-first physical infrastructure monitoring dashboard for datacenters and HPC environments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Thomas Bourcey", email = "sckyzo@gmail.com"}]
dependencies = [
  "pydantic>=2.12.5",
  "pyyaml>=6.0.3",
  "fastapi>=0.128.0",
  "uvicorn>=0.40",
  "httpx>=0.28.1",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.0.0",
]

[project.urls]
Homepage = "https://rackscope.dev"
Repository = "https://github.com/SckyzO/rackscope"
Issues = "https://github.com/SckyzO/rackscope/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.8.0",
  "radon>=6.0.1",
  "ruff>=0.14.14",
]

[project.scripts]
rackscope = "rackscope.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rackscope*", "plugins*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
# Ensure the top-level plugins/ package is importable during test collection.
# Without this, pytest doesn't add the project root to sys.path and
# `from plugins.simulator.backend import ...` fails even with PYTHONPATH set.
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
