[project]
name = "rackscope"
version = "1.0.0-beta"
description = "Prometheus-first physical infrastructure monitoring dashboard for datacenters and HPC environments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Thomas Bourcey", email = "sckyzo@gmail.com"}]
dependencies = [
  "pydantic>=2.12.5,<3.0",
  "pyyaml>=6.0.3,<7.0",
  "fastapi>=0.128.0,<1.0",
  "uvicorn>=0.40,<1.0",
  "httpx>=0.28.1,<1.0",
  "PyJWT>=2.11.0,<3.0",
  "bcrypt>=4.0.0,<5.0",
]

[project.urls]
Homepage = "https://rackscope.dev"
Repository = "https://github.com/SckyzO/rackscope"
Issues = "https://github.com/SckyzO/rackscope/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-cov>=4.1.0,<6.0",
  "pytest-asyncio>=0.23.0,<1.0",
  "mypy>=1.8.0,<2.0",
  "bandit>=1.7.0,<2.0",
  "pip-audit>=2.6.0,<3.0",
  "radon>=6.0.1,<7.0",
  "ruff>=0.14.14,<1.0",
]

[project.scripts]
rackscope = "rackscope.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rackscope*", "plugins*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
# Ensure the top-level plugins/ package is importable during test collection.
# Without this, pytest doesn't add the project root to sys.path and
# `from plugins.simulator.backend import ...` fails even with PYTHONPATH set.
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
